@@ -130,7 +130,7 @@ void				cexpContextSetCurrent(CexpContext);
 
 typedef CexpContext CexpContextOSD;
 
-#define cexpContextInitOnce()		do {} while (0)
+#define cexpContextInitOnce()		(cexpCurrentContext = 0, 0)
 #define cexpContextRegister()		do {} while (0)
 #define cexpContextUnregister()		do {} while(0)
 #define cexpContextGetCurrent(pc)	do { *(pc) = cexpCurrentContext;	} while (0)
@@ -145,9 +145,8 @@ typedef CexpContext CexpContextOSD;
 
 typedef epicsThreadPrivateId	CexpContextOSD;
 
-#define cexpContextInitOnce()		do { if (!cexpCurrentContext)								\
-											cexpCurrentContext = epicsThreadPrivateCreate();	\
-									} while (0)
+#define cexpContextInitOnce()		(! (cexpCurrentContext ||	\
+									   (cexpCurrentContext = epicsThreadPrivateCreate()) )
 
 #define cexpContextRegister()		do {  } while (0)
 #define cexpContextUnregister()		do {  } while (0)
@@ -157,12 +156,27 @@ typedef epicsThreadPrivateId	CexpContextOSD;
 																);						\
 									} while (0))
 
-#define cexpContextSetCurrent(c)	do { 												\
-										extern CexpContextOSD	cexpCurrentContext;		\
-										epicsThreadPrivateSet(cexpCurrentContext,(c));	\
-									} while (0)
+#define cexpContextSetCurrent(c)	epicsThreadPrivateSet(cexpCurrentContext,(c))
 
 #define cexpContextRunOnce(pdone, fn)	epicsThreadOnce(pdone,(void (*)(void*))fn,0)
+
+#elif defined(HAVE_PTHREADS)
+#include <pthread.h>
+typedef pthread_key_t CexpContextOSD;
+
+#define cexpContextInitOnce()		pthread_key_create(&cexpCurrentContext,0)
+
+#define cexpContextRunOnce(pdone, fn)	do { if (!(*(pdone))) {							\
+												(*(pdone))++; fn(0);					\
+											 }											\
+									} while (0)
+
+
+#define cexpContextRegister()		do {  } while (0)
+#define cexpContextUnregister()		do {  } while (0)
+
+#define cexpContextGetCurrent(pc) do { *pc = pthread_getspecific(cexpCurrentContext); } while (0)
+#define cexpContextSetCurrent(c)  pthread_setspecific(cexpCurrentContext, c)
 
 #elif defined(__rtems__)
 
@@ -199,7 +213,7 @@ typedef CexpContext CexpContextOSD;
  * explicitely call cexpInit(), hence we don't bother
  * about race conditions in cexpInit().
  */
-#define cexpContextInitOnce()		do {} while (0)
+#define cexpContextInitOnce()		(cexpCurrentContext = 0, 0)
 #define cexpContextRunOnce(pdone, fn)	do { if (!(*(pdone))) {							\
 												(*(pdone))++; fn(0);					\
 											 }											\
